se agrego las etiquetas de header,main, footer para comenzara realizar la anatomia de la pagina

--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,25 @@
         <meta name="description" content="esta pagina te mostrar ftos de gatos">
         <meta name="robots" content="index,follow">
         <title>Es mi pagina</title>
-        <meta name="viwport" content="width=device-width, inictial-scale=1.0">
+        <meta name="viwport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Styles.css">
     </head>
     <body>
-        
+       <header>
+           <nav></nav>
+       </header> 
+       <main>
+        <section>
+            <article>
+
+            </article>
+        </section>
+        <ul></ul> // lista desordenada//
+        <li> </li> // elemento de la lista ul//
+        <ol></ol> //lista ordenada//
+       </main>
+       <footer>
+
+       </footer>
     </body>
 </html>
