se realizaron cambios en los documentos Readme y index.html, se realizo el primer ejercicio de practica de HTML y CSS

--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
        <header>
+           <h1>Practica</h1>
            <nav></nav>
        </header> 
        <main>
@@ -18,12 +19,20 @@
 
             </article>
         </section>
+        <h1>Verduras : </h1>
         <ul></ul> // lista desordenada//
-        <li> </li> // elemento de la lista ul//
+        <li> Repollo</li> // elemento de la lista ul//
+        <li> <a href="https://mejorconsalud.as.com/4-recetas-deliciosas-con-zanahorias/">Zanahoria</a></li>
+        <li> aguacate</li>
         <ol></ol> //lista ordenada//
        </main>
        <footer>
 
        </footer>
+       <p> Soy un texto</p> // etiqueta de contenido( parrafo)//
+       <h1>Soy un titulo</h1> // encabezado del h1 al h6, entre mas grande sea el h mas pequeña la fuente//
+       <h2> soy otro titulo</h2>
+       <a href="#">soy un link</a>
+
     </body>
 </html>
